refatoracao do projeto para react concluida

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,240 @@
-.App {
-  text-align: center;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+span,
+p,
+h1,
+h2,
+h3,
+h4,
+Link,
+label,
+a {
+  font-family: "Lusitana", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+@keyframes scroll {
+  0% {
+    transform: translateX(0%);
+  }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  100% {
+    transform: translateX(-100%);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.balance {
+  animation: balance 3s normal;
+}
+
+@keyframes balance {
+
+  0% {
+    transform: rotate(35deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+
+.icon-primary-color {
+  fill: #5D5D5D;
+}
+
+.icon-white {
+  fill: #ffffff;
+}
+
+.animate-scroll {
+  animation: scroll 40s linear infinite;
+}
+
+.drop-shadow {
+  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.text-with-shadow {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  /* offsetX, offsetY, blurRadius, color */
+}
+
+.background-image {
+  background-image: url('../public/images/background.png');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 458px;
+  position: absolute;
+  margin-bottom: 300px;
+  opacity: 70%;
+}
+
+.background-image-service {
+  background-image: url('../public/images/background-service.png');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 234px;
+  position: absolute;
+  z-index: 0;
+}
+
+.background-image-service-auto {
+  background-image: url('../public/images/auto.png');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 234px;
+  position: absolute;
+  opacity: 50%;
+  z-index: 0;
+}
+
+@media (max-width: 600px) {
+  .background-image {
+    height: 478px;
+  }
+
+  .animate-scroll {
+    animation: scroll 15s linear infinite;
+  }
+}
+
+.glass {
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 20px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.gradient-right {
+  background: linear-gradient(to right,
+      #5D5D5D,
+      #f9f9f9);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.lusitana-regular {
+  font-family: "Lusitana", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.lusitana-bold {
+  font-family: "Lusitana", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+label {
+  color: #5D5D5D;
+}
+
+.primary-color {
+  color: #5D5D5D;
+}
+
+.second-color {
+  color: #00D408;
+}
+
+.danger-color {
+  color: #D41010;
+}
+
+
+.bg-primary-color {
+  background-color: #5D5D5D;
+}
+
+.bg-second-color {
+  background-color: #00D408;
+}
+
+.bg-third-color {
+  background-color: #F8F8F8;
+}
+
+.btn-primary {
+  padding: 2px;
+  background-color: #00D408;
+  border-radius: 5px;
+  color: #FFFFFF;
+  padding-left: 22px;
+  padding-right: 22px;
+}
+
+.btn-second {
+  padding: 2px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  color: #5D5D5D;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.btn-third {
+  padding: 2px;
+  color: #ffffff;
+  border-radius: 5px;
+  background-color: #5D5D5D;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.custon-border {
+  border-bottom-width: 8px;
+  border-color: #5D5D5D;
+  border-style: solid;
+  position: relative;
+}
+
+.second-custon-border {
+  border-bottom-width: 5px;
+  border-radius: 5px;
+  border-color: #737373;
+  border-style: solid;
+  position: relative;
+}
+
+.thrid-custon-border {
+  border-bottom-width: 2px;
+  border-radius: 5px;
+  border-color: #737373;
+  border-style: solid;
+  position: relative;
+}
+
+.thrid-custon-border-r {
+  border-right: #737373;
+  border-radius: 5px;
+  border-style: solid;
+  position: relative;
+}
+
+.thrid-custon-border-r-white {
+  border-right: #ffffff;
+  border-radius: 5px;
+  border-style: solid;
+  position: relative;
+}
+
+.green-custon-border {
+  border-bottom-width: 5px;
+  border-radius: 5px;
+
+  border-color: #00D408;
+  border-style: solid;
+  position: relative;
+}
+
+.action-click {
+  margin-bottom: -8px;
+  background-color: #FFFFFF;
 }
